// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SplitterLayout Render multiple Splitter in div 1`] = `
<DocumentFragment>
  <div
    data-testid="Container"
  >
    <div
      aria-label="Press ARROW keys to move"
      aria-orientation="horizontal"
      class="Splitter-splitter"
      data-splitter-vertical="horizontal"
      role="separator"
      tabindex="0"
      title="Press ARROW keys to move"
    >
      <div
        class="Splitter-lineBefore"
      />
      <ui5-icon
        class="Splitter-icon"
        design="Default"
        name="vertical-grip"
        ui5-icon=""
      />
      <div
        class="Splitter-lineAfter"
      />
    </div>
    <div
      aria-label="Press ARROW keys to move"
      aria-orientation="horizontal"
      class="Splitter-splitter"
      data-splitter-vertical="horizontal"
      role="separator"
      tabindex="0"
      title="Press ARROW keys to move"
    >
      <div
        class="Splitter-lineBefore"
      />
      <ui5-icon
        class="Splitter-icon"
        design="Default"
        name="vertical-grip"
        ui5-icon=""
      />
      <div
        class="Splitter-lineAfter"
      />
    </div>
    <div
      aria-label="Press ARROW keys to move"
      aria-orientation="vertical"
      class="Splitter-splitter"
      data-splitter-vertical="vertical"
      role="separator"
      tabindex="0"
      title="Press ARROW keys to move"
    >
      <div
        class="Splitter-lineBefore"
      />
      <ui5-icon
        class="Splitter-icon"
        design="Default"
        name="horizontal-grip"
        ui5-icon=""
      />
      <div
        class="Splitter-lineAfter"
      />
    </div>
    <div
      aria-label="Press ARROW keys to move"
      aria-orientation="vertical"
      class="Splitter-splitter"
      data-splitter-vertical="vertical"
      role="separator"
      tabindex="0"
      title="Press ARROW keys to move"
    >
      <div
        class="Splitter-lineBefore"
      />
      <ui5-icon
        class="Splitter-icon"
        design="Default"
        name="horizontal-grip"
        ui5-icon=""
      />
      <div
        class="Splitter-lineAfter"
      />
    </div>
    <div
      aria-label="Press ARROW keys to move"
      aria-orientation="horizontal"
      class="Splitter-splitter"
      data-splitter-vertical="horizontal"
      role="separator"
      tabindex="0"
      title="Press ARROW keys to move"
    >
      <div
        class="Splitter-lineBefore"
      />
      <ui5-icon
        class="Splitter-icon"
        design="Default"
        name="vertical-grip"
        ui5-icon=""
      />
      <div
        class="Splitter-lineAfter"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`SplitterLayout Render single Splitter 1`] = `
<DocumentFragment>
  <div
    aria-label="Press ARROW keys to move"
    aria-orientation="horizontal"
    class="Splitter-splitter"
    data-splitter-vertical="horizontal"
    role="separator"
    tabindex="0"
    title="Press ARROW keys to move"
  >
    <div
      class="Splitter-lineBefore"
    />
    <ui5-icon
      class="Splitter-icon"
      design="Default"
      name="vertical-grip"
      ui5-icon=""
    />
    <div
      class="Splitter-lineAfter"
    />
  </div>
</DocumentFragment>
`;

exports[`SplitterLayout Render single Splitter without required props 1`] = `
<DocumentFragment>
  <div
    aria-label="Press ARROW keys to move"
    aria-orientation="horizontal"
    class="Splitter-splitter"
    data-splitter-vertical="horizontal"
    role="separator"
    tabindex="0"
    title="Press ARROW keys to move"
  >
    <div
      class="Splitter-lineBefore"
    />
    <ui5-icon
      class="Splitter-icon"
      design="Default"
      name="vertical-grip"
      ui5-icon=""
    />
    <div
      class="Splitter-lineAfter"
    />
  </div>
</DocumentFragment>
`;
